<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="name"
            type="com.android.example.exer4_sibor_b4l.Data"/>
        <variable
            name="nickname"
            type="com.android.example.exer4_sibor_b4l.Data"/>
        <variable
            name="age"
            type="com.android.example.exer4_sibor_b4l.Data"/>
        <variable
            name="bday"
            type="com.android.example.exer4_sibor_b4l.Data"/>
        <variable
            name="number"
            type="com.android.example.exer4_sibor_b4l.Data"/>
        <variable
            name="email"
            type="com.android.example.exer4_sibor_b4l.Data"/>
        <variable
            name="course"
            type="com.android.example.exer4_sibor_b4l.Data"/>
        <variable
            name="dream"
            type="com.android.example.exer4_sibor_b4l.Data"/>
        <variable
            name="crush"
            type="com.android.example.exer4_sibor_b4l.Data"/>
        <variable
            name="message"
            type="com.android.example.exer4_sibor_b4l.Data"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/nameText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@={name.name}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.043"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/nameEdit"
                    android:layout_width="match_parent"
                    android:layout_height="34dp"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/name_hint"
                    android:inputType="textPersonName"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.06"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/nicknameText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@={nickname.name}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.043"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/nicknameEdit"
                    android:layout_width="match_parent"
                    android:layout_height="34dp"
                    android:ems="10"
                    android:hint="@string/nickname_hint"
                    android:inputType="textPersonName"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/ageText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@={age.name}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.041"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/ageEdit"
                    android:layout_width="match_parent"
                    android:layout_height="34dp"
                    android:ems="10"
                    android:hint="@string/age_hint"
                    android:inputType="number"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent" />


                <TextView
                    android:id="@+id/bdayText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@={bday.name}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.039"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/bdayEdit"
                    android:layout_width="match_parent"
                    android:layout_height="34dp"
                    android:ems="10"
                    android:hint="@string/bday_hint"
                    android:inputType="date"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/numberText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@={number.name}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.038"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/numberEdit"
                    android:layout_width="match_parent"
                    android:layout_height="34dp"
                    android:ems="10"
                    android:hint="@string/number_hint"
                    android:inputType="phone"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/emailText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@={email.name}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.044"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/emailEdit"
                    android:layout_width="match_parent"
                    android:layout_height="34dp"
                    android:ems="10"
                    android:hint="@string/email_hint"
                    android:inputType="text"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/courseText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@={course.name}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.043"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/courseEdit"
                    android:layout_width="match_parent"
                    android:layout_height="34dp"
                    android:ems="10"
                    android:hint="@string/course_hint"
                    android:inputType="text"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/dreamText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@={dream.name}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.049"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/dreamEdit"
                    android:layout_width="match_parent"
                    android:layout_height="34dp"
                    android:ems="10"
                    android:hint="@string/dream_hint"
                    android:inputType="text"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/crushText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@={crush.name}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.049"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/crushEdit"
                    android:layout_width="match_parent"
                    android:layout_height="34dp"
                    android:ems="10"
                    android:hint="@string/crush_hint"
                    android:inputType="text"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/messageText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@={message.name}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.049"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/messageEdit"
                    android:layout_width="match_parent"
                    android:layout_height="34dp"
                    android:ems="10"
                    android:inputType="textMultiLine"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent" />

                <Button
                    android:id="@+id/DoneButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="#E91E63"
                    android:text="@string/done_button"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintStart_toStartOf="parent" />
            </LinearLayout>


        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>